Testing  cmd line module passing input/output through env variable